Create 'ProductController' and 'ProductResource'
